[gd_scene load_steps=7 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Pause.gd" type="Script" id=2]
[ext_resource path="res://Land.tscn" type="PackedScene" id=3]
[ext_resource path="res://Castle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Turret.tscn" type="PackedScene" id=5]
[ext_resource path="res://Restart.gd" type="Script" id=6]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Tiles" type="CanvasLayer" parent="Background"]

[node name="Land" parent="Background/Tiles" instance=ExtResource( 3 )]

[node name="Pause" type="Control" parent="Background"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="Background/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Castle" parent="Background" instance=ExtResource( 4 )]
position = Vector2( 512, 624 )

[node name="Turret" parent="Background/Castle" instance=ExtResource( 5 )]
position = Vector2( -176, 48 )

[node name="Turret" parent="Background/Castle/Turret" instance=ExtResource( 5 )]
position = Vector2( 352, 0 )

[node name="Fun" type="CanvasLayer" parent="."]

[node name="Restart" type="Button" parent="Fun"]
margin_left = 200.0
margin_top = 696.0
margin_right = 257.0
margin_bottom = 716.0
text = "Restart"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StacheGuyCounter" type="Label" parent="Fun"]
margin_left = 152.0
margin_top = 696.0
margin_right = 184.0
margin_bottom = 718.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StacheGuyCounter2" type="Label" parent="Fun"]
margin_left = 8.0
margin_top = 696.0
margin_right = 150.0
margin_bottom = 718.0
text = "Stache Guys Spawned:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_top = 680.0
margin_right = 1024.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Fun/Restart" to="." method="_on_Restart_pressed"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
